Fix syntax highlighting for dark mode

--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,7 +1,7 @@
 pre > code.sourceCode { white-space: pre; position: relative; }
 pre > code.sourceCode > span { display: inline-block; line-height: 1.25; }
 pre > code.sourceCode > span:empty { height: 1.2em; }
-code.sourceCode > span { color: inherit; text-decoration: inherit; }
+code.sourceCode > span { color: #000; text-decoration: inherit; }
 div.sourceCode { margin: 1em 0; }
 pre.sourceCode { margin: 0.5em; }
 @media screen {
@@ -31,7 +31,7 @@ div.sourceCode
 @media screen {
 pre > code.sourceCode > span > a:first-child::before { text-decoration: underline; }
 }
-p > code { background-color: #f0f0f0; padding: 0.125em 0; }
+p > code { background-color: #f0f0f0; color: #000; padding: 0.125em 0; }
 code span.al { color: #ef2929; } /* Alert */
 code span.an { color: #8f5902; font-weight: bold; font-style: italic; } /* Annotation */
 code span.at { color: #c4a000; } /* Attribute */
